--- a/src/styles/AI.scss
+++ b/src/styles/AI.scss
@@ -1,114 +1,112 @@
 .AI {
     height: calc(50vh - 60px);
     display: flex;
+    justify-content: center;
     align-items: flex-start;
-    padding-left: 273px;
     transform: translateY(100px);
     position: relative;
+    pointer-events: none;
 
-    .pulsatingCircle{
-        width:25px;
-        height:25px;
-        display:block;
-        // position: absolute ;
-        transform:scale(4,4) translate(-18px, 9px) ;
-    }
+   &-container{
+       width: 1360px;
 
-    .firstCircle,
-    .secondCircle,
-    .thirdCircle{
-        top:50%;
-        left:50%;
-        display:block;
-        border-radius:50%;
-        position:absolute;
-        vertical-align:middle;
-    }
-
-    .firstCircle{
-        width:8px;
-        height:8px;
-        margin:-5px 0 0 -5px;
-        background-color: $lightblue;
-    }
-    
-    .secondCircle{
-        width:12px;
-        height:12px;
-        margin:-10px 0 0 -10px;
-        border: 3px solid rgba(41, 120, 255, 0.54);
-        animation:2000ms pulseIn ease-in-out infinite;					
-    }
-    
-    @keyframes pulseIn{
-        0%{
-            opacity:0;
-            transform:scale(0.2,0.2);
-        }
-        50%{
-            opacity:1;
-            transform:scale(1,1);
-        }
-        100%{
-            opacity:0;
-            transform:scale(0.2,0.2);
-        }
-    }
-                
-    .thirdCircle{
-        width:16px;
-        height:16px;
-        border: 4px solid rgba(41, 120, 255, 0.54);
-        margin:-13px 0 0 -13px;
-        animation:2000ms pulseIn 500ms ease-in-out infinite;
-    }  
-    
-    >p{
-        width: 760px;
-        font-size: 80px;
-        font-weight: bold;
-        position: relative;
-    }
-}
-
-@media only screen and (max-width: 1200px){
-    .AI {
-        padding-left: 100px;
         .pulsatingCircle{
-            transform: scale(4, 4) translate(-6px, 9px);
+            width:25px;
+            height:25px;
+            display:block;
+            transform:scale(4,4) translate(-13px, 15px) ;
         }
 
-        p {
-            width: auto;
-            // text-align: center;
+        .firstCircle,
+        .secondCircle,
+        .thirdCircle{
+            top:50%;
+            left:50%;
+            display:block;
+            border-radius:50%;
+            position:absolute;
+            vertical-align:middle;
         }
-    }
-} 
-@media only screen and (max-width: 807px){
+
+        .firstCircle{
+            width:8px;
+            height:8px;
+            margin:-5px 0 0 -5px;
+            background-color: $lightblue;
+        }
+        
+        .secondCircle{
+            width:12px;
+            height:12px;
+            margin:-10px 0 0 -10px;
+            border: 3px solid rgba(41, 120, 255, 0.54);
+            animation:2000ms pulseIn ease-in-out infinite;					
+        }
+        
+        @keyframes pulseIn{
+            0%{
+                opacity:0;
+                transform:scale(0.2,0.2);
+            }
+            50%{
+                opacity:1;
+                transform:scale(1,1);
+            }
+            100%{
+                opacity:0;
+                transform:scale(0.2,0.2);
+            }
+        }
+                    
+        .thirdCircle{
+            width:16px;
+            height:16px;
+            border: 4px solid rgba(41, 120, 255, 0.54);
+            margin:-13px 0 0 -13px;
+            animation:2000ms pulseIn 500ms ease-in-out infinite;
+        }  
+        
+        >p{
+            width: 760px;
+            font-size: 80px;
+            font-weight: bold;
+            position: relative;
+        }
+   }
+}
+@media only screen and (max-width: 1550px){
     .AI{
-        height: auto;
-        margin-top: 100px;
-        transform: none;
-        padding-left: 0;
+        padding-left: 100px;
     }
 }
-
-@media only screen and (max-width: 800px){
+@media only screen and (max-width: 768px){
     .AI{
-        padding-left: 80px;
-        
+        padding: 0;
+        height: 100vh;
+        p{
+            width: auto;
+        }
+    }
+}
+@media only screen and (max-width: 425px){
+    .AI{
+        .pulsatingCircle{
+            display: none;
+        }
+        p{
+            font-size: 80px;
+        }
+    }
+}
+@media only screen and (max-width: 375px){
+    .AI{
         p{
             font-size: 70px;
         }
     }
 }
-
-@media only screen and (max-width: 425px){
+@media only screen and (max-width: 320px){
     .AI{
-        margin-top: 120px;
-        margin-bottom: 120px;
-        padding-left: 0;
-        
         p{
             font-size: 60px;
         }
