--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -22,6 +22,7 @@
 @media only screen and (max-width: 1200px){
     .section-services{
         padding: 0;
+        margin-top: 100px;
         .cards-services{
             justify-content: center;
             margin-left: -65px;
