--- a/docs/style.css
+++ b/docs/style.css
@@ -533,11 +533,12 @@
     .header-container button {
       width: 134px;
       height: 40px;
+      font-size: 15px;
       color: white;
+      background-color: transparent;
+      border: 1px solid #2979ff;
       border-radius: 20px;
-      background-color: #2979ff;
-      outline: none;
-      border: none; }
+      outline: none; }
 
 .white-page {
   padding: 0; }
@@ -599,7 +600,7 @@
       width: 25px;
       height: 25px;
       display: block;
-      transform: scale(4, 4) translate(-13px, 15px); }
+      transform: scale(4, 4) translate(-13px, 16px); }
     .AI-container .firstCircle,
     .AI-container .secondCircle,
     .AI-container .thirdCircle {
@@ -627,7 +628,7 @@
     transform: scale(0.2, 0.2); }
   50% {
     opacity: 1;
-    transform: scale(1, 1); }
+    transform: scale(0.7, 0.7); }
   100% {
     opacity: 0;
     transform: scale(0.2, 0.2); } }
@@ -636,7 +637,7 @@
       height: 16px;
       border: 4px solid rgba(41, 120, 255, 0.54);
       margin: -13px 0 0 -13px;
-      animation: 2000ms pulseIn 500ms ease-in-out infinite; }
+      animation: 2000ms pulseIn 350ms ease-in-out infinite; }
     .AI-container > p {
       width: 760px;
       font-size: 80px;
