--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,6 +1,6 @@
 .home{
     color: #ffffff;
-    background-color: black;
+    background-color: #0d0f1c;
     margin: 0px;
     padding: 0px;
     overflow: hidden;
