--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -88,8 +88,8 @@
       height: 40px;
       font-size: 15px;
       color: white;
-      background-color: transparent;
       border: 1px solid $lightblue;
+      background-color: transparent;
       border-radius: 20px;
       outline: none;
     }
@@ -147,6 +147,9 @@
       fill: black;
     }
   } 
+  button{
+    color: black;
+  }
 }
 
 
@@ -161,7 +164,7 @@
     &-container{
       height: 30px;
       div{
-        nav{
+        >nav{
           display: none;
         }
       }
