--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -23,23 +23,63 @@
     >div:first-of-type {
         position: relative;
     }
-
-    .home-route-enter {
-        position: absolute;
-        opacity: 0;
-        
-        &.home-route-enter-active {
+    $route-animation-speed: .6s;
+    .scroll-section {
+        &.home-route-enter {
+            position: absolute;
+            opacity: 0;
+            
+            &.home-route-enter-active {
+                opacity: 1;
+                transition: opacity $route-animation-speed / 2;
+                transition-delay: $route-animation-speed / 2;
+            }
+        }
+        &.home-route-exit {
             opacity: 1;
-            transition: opacity .5s;
-            transition-delay: .25s;
+
+            &.home-route-exit-active {
+                opacity: 0;
+                transition: opacity $route-animation-speed / 2;
+            }
         }
     }
-    .home-route-exit {
-        opacity: 1;   
 
-        &.home-route-exit-active {
+    .section-services {
+        $tile-animation-speed: ($route-animation-speed / 2) / 5;
+        &.home-route-enter {
+            position: absolute;
             opacity: 0;
-            transition: opacity .25s;
+            
+            &.home-route-enter-active {
+                opacity: 1;
+                transition: opacity $route-animation-speed / 2;
+                transition-delay: $route-animation-speed / 2;
+            }
+        }
+        &.home-route-exit {
+            .card-services {
+                opacity: 1;
+            }
+            &.home-route-exit-active {
+                .card-services {
+                    opacity: 0;
+                    transition: opacity $tile-animation-speed;
+
+                    &:nth-child(2) {
+                        transition-delay: $tile-animation-speed * 1;
+                    }
+                    &:nth-child(3) {
+                        transition-delay: $tile-animation-speed * 2;
+                    }
+                    &:nth-child(4) {
+                        transition-delay: $tile-animation-speed * 3;
+                    }
+                    &:nth-child(5) {
+                        transition-delay: $tile-animation-speed * 4;
+                    }
+                }
+            }
         }
     }
 }
