--- a/docs/style.css
+++ b/docs/style.css
@@ -474,7 +474,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 20px; }
+  margin-top: 20px;
+  padding-right: 25px;
+  padding-left: 25px; }
   .header-container {
     width: 1360px;
     display: flex;
@@ -572,10 +574,14 @@
   .white-page button {
     color: black; }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1400px) {
   .header {
-    padding-left: 25px;
+    padding-left: 100px;
     padding-right: 25px; } }
+
+@media only screen and (max-width: 855px) {
+  .header {
+    padding-left: 25px; } }
 
 @media only screen and (max-width: 768px) {
   .header-container {
@@ -650,11 +656,12 @@
   .AI {
     padding-left: 100px; } }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 855px) {
   .AI {
     padding-left: 25px;
     padding-right: 25px;
-    height: 100vh; }
+    padding-bottom: 200px;
+    height: 100%; }
     .AI p {
       width: auto; } }
 
@@ -769,7 +776,7 @@
       height: 182px;
       transform: translate(48%, 37%); } }
 
-@media only screen and (max-width: 630px) {
+@media only screen and (max-width: 768px) {
   .scroll-section {
     height: auto;
     display: flex;
@@ -828,18 +835,38 @@
       right: -250px; }
   .home > div:first-of-type {
     position: relative; }
-  .home .home-route-enter {
+  .home .scroll-section.home-route-enter {
     position: absolute;
     opacity: 0; }
-    .home .home-route-enter.home-route-enter-active {
+    .home .scroll-section.home-route-enter.home-route-enter-active {
       opacity: 1;
-      transition: opacity .5s;
-      transition-delay: .25s; }
-  .home .home-route-exit {
+      transition: opacity 0.3s;
+      transition-delay: 0.3s; }
+  .home .scroll-section.home-route-exit {
     opacity: 1; }
-    .home .home-route-exit.home-route-exit-active {
+    .home .scroll-section.home-route-exit.home-route-exit-active {
       opacity: 0;
-      transition: opacity .25s; }
+      transition: opacity 0.3s; }
+  .home .section-services.home-route-enter {
+    position: absolute;
+    opacity: 0; }
+    .home .section-services.home-route-enter.home-route-enter-active {
+      opacity: 1;
+      transition: opacity 0.3s;
+      transition-delay: 0.3s; }
+  .home .section-services.home-route-exit .card-services {
+    opacity: 1; }
+  .home .section-services.home-route-exit.home-route-exit-active .card-services {
+    opacity: 0;
+    transition: opacity 0.06s; }
+    .home .section-services.home-route-exit.home-route-exit-active .card-services:nth-child(2) {
+      transition-delay: 0.06s; }
+    .home .section-services.home-route-exit.home-route-exit-active .card-services:nth-child(3) {
+      transition-delay: 0.12s; }
+    .home .section-services.home-route-exit.home-route-exit-active .card-services:nth-child(4) {
+      transition-delay: 0.18s; }
+    .home .section-services.home-route-exit.home-route-exit-active .card-services:nth-child(5) {
+      transition-delay: 0.24s; }
 
 @media only screen and (max-width: 630px) {
   .home .web-gl #vanta-net {
@@ -1017,6 +1044,7 @@
     .section-services .cards-services .card-services {
       display: flex;
       flex-direction: column;
+      font-size: 20px;
       margin-left: 65px;
       margin-bottom: 50px; }
       .section-services .cards-services .card-services > span {
@@ -1024,8 +1052,7 @@
 
 @media only screen and (max-width: 1200px) {
   .section-services {
-    padding: 0;
-    margin-top: 100px; }
+    padding: 0; }
     .section-services .cards-services {
       justify-content: center;
       margin-left: -65px; } }
