--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -3,7 +3,8 @@
   justify-content: center;
   align-items: center;
   margin-top: 20px;
-  
+  padding-right: 25px;
+  padding-left: 25px;
   &-container{
     width: 1360px;
     display: flex;
@@ -152,11 +153,16 @@
   }
 }
 
-
-@media only screen and (max-width: 1200px){
+@media only screen and (max-width: 1400px){
+  .header{
+    padding-left: 100px;
+    padding-right: 25px;
+  }
+}
+@media only screen and (max-width: 855px){
   .header{
     padding-left: 25px;
-    padding-right: 25px;
+
   }
 }
 @media only screen and (max-width: 768px){
