--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -10,6 +10,7 @@
         .card-services {
             display: flex;
             flex-direction: column;
+            font-size: 20px;
             margin-left: 65px;
             margin-bottom: 50px;
             > span{
@@ -22,7 +23,6 @@
 @media only screen and (max-width: 1200px){
     .section-services{
         padding: 0;
-        margin-top: 100px;
         .cards-services{
             justify-content: center;
             margin-left: -65px;
