--- a/src/styles/neural.scss
+++ b/src/styles/neural.scss
@@ -67,17 +67,20 @@
         }
     }
 
-    .video-section{
+    .video-section {
 
         margin-bottom: 120px;
 
-            .container{
+            .container {
                 display: flex;
                 justify-content: center;
-                .video{
-
-                    &:not(:first-of-type){
-                        margin-left: 120px;
+                
+                .video {
+                    width: 100%;
+                    height: 100%;
+                    margin-left: 120px;
+                    &:first-of-type{
+                        margin-left: 0px;
                     }
                 }
             }
@@ -86,26 +89,30 @@
     //     height: 888px;
     //     background-color: #171717;
     // }
-    .skills{
+    .skills {
+        padding-left: 25px;
+        padding-right: 25px;
 
-        div{
+        div {
             text-align: center;
 
-            h1{
+            h1 {
                 font-size: 40px;
                 font-weight: bold;
             }
 
-            p{
+            p {
                 font-size: 18px;
                 margin: 28px 0 63px 0;
             }
         }
-        .cards{
+        .cards {
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
+            margin-left: -25px; // because card +25 
 
-            .card{
+            .card {
                 width: 174px;
                 height: 174px;
                 border-radius: 8px;
@@ -115,12 +122,9 @@
                 display: flex;
                 justify-content: center;
                 flex-direction: column;
+                margin-left: 25px;
 
-                &+.card{
-                    margin-left: 24px;
-                }
-
-                img{
+                img {
                     width: 56px;
                     height: 56px;
                     margin: 0 auto;
@@ -129,25 +133,27 @@
             }
         }
     }
-    footer{
+    footer {
         display: flex;
         justify-content: center;
+        padding-left: 25px;
+        padding-right: 25px;
 
-        .container{
+        .container {
             width: 1385px;
             display: flex;
 
-            .software{
+            .software {
                 width: 100%;
 
-                span{
+                span {
                     display: inline-block;
                     margin-bottom: 21px;
                     font-size: 16px;
                     font-weight: bold;
                 }
 
-                ul{
+                ul {
                     display: flex;
                     height: 85px;
                     flex-direction: column;
@@ -192,21 +198,17 @@
     }
 }
 
-.none{
+.none {
     display: none;
 }
-@media only screen and (max-width: 1100px){
-    .neural{
-        .skills{
-            flex-wrap: wrap;
-        }
-
-        footer{
-          .container{
+@media only screen and (max-width: 1100px) {
+    .neural {
+        footer {
+          .container {
             width: 720px;
             flex-direction: column;
 
-            .software{
+            .software {
                 margin-bottom: 40px;
 
             }
@@ -214,18 +216,18 @@
       }
     }
 }
-@media only screen and (max-width: 620px){
-    .neural{
+@media only screen and (max-width: 620px) {
+    .neural {
 
-        footer{
+        footer {
 
-            .container{
+            .container {
               width: 445px;
               flex-direction: column;
 
               .software{
 
-                ul{
+                ul {
                     height: 160px;
                 }
               }
@@ -233,26 +235,19 @@
         }
     }
 }
-@media only screen and (max-width: 680px) {
-    .neural{
+@media only screen and (max-width: 768px) {
+    .neural {
         margin-bottom: 100px;
 
-        .networks{
-            .networks-container{
+        .networks {
+            .networks-container {
                 margin-top: 135px;
             }
         }
 
-        .skills{
-            .cards{
+        .skills {
+            .cards {
                 flex-wrap: wrap;
-
-                .card{
-
-                    &+.card{
-                        margin-left: 0;
-                    }
-                }
             }
         }
     }
