--- a/src/styles/scroll-section.scss
+++ b/src/styles/scroll-section.scss
@@ -3,7 +3,7 @@
   overflow: hidden;
   height: 100vh;
 
-  >.cards{
+  >.cards {
     display: flex;
     padding-left: 273px;
     margin-bottom: -15px;
@@ -23,20 +23,20 @@
 
       > div {
         width: 280px;
-        > span{
+        > span {
           font-size: 15px;
           opacity: .3;
         }
-        > p{
+        > p {
           font-size: 24px;
           font-weight: bold;
           margin: 8px 0 0 0;
         }
-        > small{
+        > small {
           display: inline-block;
           margin: 24px 0 74px 0;
         }
-        .arrow{
+        .arrow {
           width: 32px;
           height: 32px;
           background: $lightblue;
@@ -44,7 +44,7 @@
           display: flex;
           justify-content: center;
           align-items: center;
-          img{
+          img {
             width: 17px;
           }
         }
@@ -88,6 +88,7 @@
           overflow: hidden;
           z-index: 999;
           margin-bottom: 350px;
+          pointer-events: none;
           &.scroll-x {
             overflow-y: auto;
           }
@@ -109,7 +110,7 @@
 @media only screen and (max-width: 1200px){
   .scroll-section{
     > .cards{
-      padding-left: 25px;
+      padding-left: 100px;
     }
   }
 }
